--- a/Project 4.html
+++ b/Project 4.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     If i did get into baking it would be baking delicious cookies.
-    <img src= "cookies.jpg" alt=Cookies
-<blockquote> 
+    <img src= "cookies.jpg" alt="Cookies">
+ 
     **Prep:** 10 minutes
 
     **Cook Time:** 15 minutes
@@ -17,7 +17,7 @@
     **Cool Time:** 15 minutes
 
     **Total:** 40 minutes
-</blockquote>
+
 
     
 
